# mumaxplus

./: CMakeLists.txt  README.md  environment.yml  setup.py
distributed_poc/: CMakeLists.txt  README.md  benchmark_test.cu  halo_exchange_test.cu  heffte_poc.cu  setup_heffte.sh  validation_test.cu
docs/: conf.py  index.rst  install.rst
docs/tutorial/: magnetization.rst
examples/: DW_rigid_strain_SAW.py  errorscaling.py  magnetization_configurations.ipynb  plot_field.ipynb  voronoi.py
mumaxplus/: magnet.py
mumaxplus/util/: __init__.py  show.py
src/bindings/: wrap_field.cpp  wrap_voronoi.cpp
src/core/: fieldops.cu
src/distributed/: CMakeLists.txt  distributedgrid.cu  distributedgrid.hpp  haloexchanger.cu  haloexchanger.hpp  mpicontext.cu  mpicontext.hpp  test_infrastructure.cu
src/physics/: afmexchange.cu  thermalnoise.cu
test/: test_exchange.py  test_exchange_afm.py  test_exchange_ncafm.py
